# Mithril_MultiGPU

./: .gitignore  1.txt  20.txt  50.txt  CMakeLists.txt  README.md  a.out  a.txt  b.out  b.txt  baseline_graph.txt  baseline_pipeline.txt  c.out  dglgcn.py  gcn_res.txt  gcn_res_pipeline.txt  gen_hostfile.sh  graphsage_res.txt  graphsage_res_12_layers.txt  graphsage_res_16_layers.txt  graphsage_res_4_layers.txt  graphsage_res_8_layers.txt  graphsage_res_pipeline.txt  grid_search_products_3e-3.txt  hostfile  instruction.txt  no_affine.txt  no_comm.txt  output.txt  output_.txt  output_baseline.txt  output_pipeline.txt  output_recompute.txt  partition.txt  prepare.sh  pubmed.sh  reddit_1_nodes.txt  reddit_2_nodes.txt  run.sh  run_alchem.sh  (+16 more)
applications/: CMakeLists.txt  gcn.cc
applications/async_multi_gpus/: CMakeLists.txt  gcn.cc  gcn_graph_parallel.cc  gcn_res.cc  gcnii.cc  gin.cc  graphsage.cc  graphsage_res.cc  graphsageii.cc  lr.cc  resgcn.cc  resgcn_plus.cc
applications/async_multi_nodes/: gcn.cc
applications/single_gpu/: CMakeLists.txt  gcn.cc  gcn_inference.cc
applications/single_node/: gcn.cc
atc2024/: 4_layer.txt  8_layer.txt  single_gpu.txt
atc2024/parition_metrics/: partition_ogb_papers.py  partition_ogb_products.py  partition_reddit.py
cmake/: FindNccl.cmake  FindcuBLAS.cmake  FindcuDA.cmake  FindcuDNN.cmake  FindcuSPARSE.cmake
context/include/: context.h  distributed_sys.h  types.h  utilities.h
context/src/: context.cc  distributed_sys.cc  utilities.cc
core/include/: application.h  dataflow.h  engine.h  executor.h  graph.h  graph_basic.h  graph_loader.h  message.h  partitioner.h  profiler.h
core/include/cuda/: cuda_data_compressor.h  cuda_dataflow.h  cuda_executor.h  cuda_graph.h  cuda_graph_loader.h  cuda_graph_parallel.h  cuda_hybrid_parallel.h  cuda_loss.h  cuda_model_parallel.h  cuda_optimizer.h  cuda_pipeline_parallel.h  cuda_resource.h  cuda_single_cpu_engine.h  cuda_utils.h  cuda_weight_manager.h
core/include/parallel/: graph_parallel.h  hybrid_parallel.h  model_parallel.h  pipelined_model_parallel.h
core/src/: application.cc  dataflow.cc  engine.cc  executor.cc  graph.cc  graph_loader.cc  partitioner.cc  profiler.cc
core/src/cuda/: cuda_data_compressor.cu  cuda_executor.cc  cuda_executor.cu  cuda_graph.cc  cuda_graph_loader.cc  (+16 more)
dgl/: hosts  launch.sh  launch_jobs.py  main.py  output.txt  submit_job.sh  test.py  with_weight_sync.txt
icml2023/grid_search/: analyze.py  output.txt  output_products.txt  output_products_2.txt  run.py  run_grid_search.sh  run_grid_search_arxiv.sh  run_grid_search_mag.sh  run_grid_search_products.sh  run_grid_search_reddit.sh
icml2023/overall_performance/: analyze.py  run.py  run.sh
icml2023/tune_pipeline/: analyze.py  output.txt  run.sh
nsdi2023/convergence_tricks/: analyze.py  run.py
nsdi2023/dgl/: flickr_gcn.txt  flickr_graphsage.txt  squirrel_gcn.txt  squirrel_graphsage.txt
nsdi2023/overall_performance/: analyze.py  analyze_breakdown.py  hostfile  hostfile2  progress.txt  progress2.txt  progress3.txt  run.py  run_residual.py  run_shallow.py  submit.sh
nsdi2023/shallow_models/: progress.txt  submit.sh
nsdi2023/strong_scaling/: analyze.py  hostfile  hostfile2  hostfile3  submit.sh
nsdi2023/various_model_depth/: submit.sh
nsdi2023/weak_scaling/: analyze.py  hostfile  progress.txt  submit.sh
ogb/: gcn.py  models.py
results/: analyze_weights.py
results/analyze_num_chunks/: analyze.py
results/analyze_random_schedule/: analyze.py  run.sh
results/analyze_runtime_distribution/: gcn_arxiv.txt  gcn_products.txt  gcn_reddit.txt  run_anvil.sh
results/analyze_scalability/: check_accuracy.py  run_12_gpus.sh  run_16_gpus.sh  run_2_gpus.sh  run_4_gpus.sh  run_8_gpus.sh  run_anvil.sh
results/analyze_weights/: .gitignore  analyze_weights.py
results/grid_search/: analyze.py  run_2_layers.sh  run_3_layers.sh
results/nsdi23_basic_benchmarks/: all_tricks.txt  hybrid_gcn_performance.txt  hybrid_gcnii_accuracy.txt  hybrid_gcnii_performance.txt  hybrid_graphsage_performance.txt  no_tricks.txt  trick_1.txt  trick_1_2.txt  trick_1_3.txt  trick_2_3.txt
results/single_gpu/: citeseer_gcn.txt  ogbn-arxiv_gcn.txt  pubmed_gcn.txt
results/test_acc/: analyze.py
results/test_acc_large_graphs/: analyze.py
results/test_acc_large_graphs_opt_lr/: analyze.py
results/test_acc_large_graphs_small_lr/: analyze.py
results/tune_startup_epoches/: analyze.py  run.sh
results/tune_startup_epoches_default_lr/: analyze.py  run.sh
results/tune_startup_epoches_no_relu/: analyze.py  run.sh
results/tune_startup_epoches_small_lr/: run.sh
scripts/: analyze_reordering.py  dataset_from_dgl.py  dataset_from_pyg.py  reorder  run_all_tests.py  setup_datasets.py
scripts/analyzing_scripts/: analyze_chunk.py  analyze_chunk_data.txt  graph_analyzer.py
scripts/graph_partitioner/: .gitignore  a.out  partition_existing_graphs.cc  partiton_graph.py  process.sh  process_graph.hpp
storage/: .gitignore
tests/: CMakeLists.txt  test_cuda.cu  test_cuda_data_compression.cc  test_cuda_data_compression.cu  test_cuda_graph.cc  test_cuda_model_parallel.cc  test_cuda_pipeline_parallel.cc  test_full_non_structual_graph.cc  test_full_structual_graph.cc  test_graph.cc  test_hello_world.cc  test_mpi_combined.cc  test_mpi_gpu_hybrid.cc  test_mpi_gpu_model_parallel.cc  test_mpi_gpu_pipelined_model_parallel.cc  test_mpi_loader.cc  test_mpi_model_parallel.cc  test_mpi_non_structual_graph.cc  test_mpi_pipelined_model_parallel.cc  test_mpi_structual_graph.cc  test_nccl_mpi.cc  test_nccl_thread.cc  test_single_node_fullgpu_training.cc  test_single_node_gpu_training.cc  test_single_node_training.cc  test_trivial.cc  test_two_layer_hybrid_parallelism_designer.cc
toolkits/: CMakeLists.txt  estimate_comm_volume.cc
txtdata/: edge_list.txt  feature.txt  label.txt
(+1890 files in other folders)
