# tests
function (add_test test_name)
	add_executable(${test_name} ${test_name}.cc)
	target_link_libraries(${test_name} ${dependencies})
endfunction()
function (add_cuda_test test_name)
	add_executable(${test_name} ${test_name}.cu)
	target_link_libraries(${test_name} ${dependencies})
endfunction()
add_test(test_trivial)
add_test(test_hello_world)
add_test(test_graph)
add_test(test_mpi_loader)
add_test(test_mpi_combined)
add_test(test_full_structual_graph)
add_test(test_full_non_structual_graph)
add_test(test_mpi_structual_graph)
add_test(test_mpi_non_structual_graph)
add_test(test_single_node_training)
add_test(test_single_node_gpu_training)
add_test(test_single_node_fullgpu_training)
add_test(test_mpi_model_parallel)
add_test(test_cuda_model_parallel)
add_test(test_cuda_pipeline_parallel)
add_test(test_mpi_gpu_model_parallel)
add_test(test_mpi_pipelined_model_parallel)
add_test(test_mpi_gpu_pipelined_model_parallel)
add_test(test_cuda_graph)
add_test(test_nccl_mpi)
add_test(test_mpi_gpu_hybrid)
add_test(test_nccl_thread)
add_cuda_test(test_cuda)
add_test(test_two_layer_hybrid_parallelism_designer)
add_test(test_cuda_data_compression)
